package app.domain.model;

public class CenterCoordinator extends Employee {

    public CenterCoordinator(String role, int id, String name, String address, int phoneNumber, String email, int citizenCardNumber, String password) {
        super(role, id, name, address, phoneNumber, email, citizenCardNumber, password);
    }

}
