@startuml
'https://plantuml.com/class-diagram
'!pragma layout smetana

class Company {
+createVaccinationCenter(VaccinationCenterDto dto)
+saveVaccinationCenter(VaccinationCenterDto dto)
}

class VaccinationCenter {
-intID;
-strName;
-strPhoneNumber;
-strEmail;
-strFax;
-strWebsite;
-strOpeningHour;
-strClosingHour;
-strSlotDuration;
-strVaccinesPerSlot;
-strRoad
-strZipCode
-strLocal
-strCenterCoordinatorID
}

class CenterCoordinator{

}

class VaccineType{
-description
-code
-vaccineTechnology
}

class Vaccine{
-brand
}

class Employee{
-id
-name
-address
-phoneNumber
-email
-citizenCardNumber
-password
}

class MassVaccinationCenter{
}

class HealthcareCenter{
-strARS;
-strAGES;
}

class CreateNewVaccinationCenterUI{
+createVaccinationCenter(VaccinationCenterDto dto)
+saveVaccinationCenter(VaccinationCenterDto dto)
}

class CreateNewVaccinationCenterController{
+createVaccinationCenter(VaccinationCenterDto dto)
+saveVaccinationCenter(VaccinationCenterDto dto)
}

CreateNewVaccinationCenterUI ..> CreateNewVaccinationCenterController
CreateNewVaccinationCenterController ..> Company
Company "1" -> "*" VaccinationCenter : storages
CreateNewVaccinationCenterController ..> VaccinationCenter
VaccinationCenter "1" --> "1" CenterCoordinator : has >
VaccinationCenter <|-- MassVaccinationCenter
VaccinationCenter <|-- HealthcareCenter
Employee <|-- CenterCoordinator
MassVaccinationCenter "1" --> "1" VaccineType: administers
HealthcareCenter "1" -down-> "*" VaccineType: administers
VaccineType "1" <-down- "*" Vaccine: is of <

@enduml